--- a/config/database.yml
+++ b/config/database.yml
@@ -13,4 +13,5 @@ test:
 
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  username: <%= ENV['TODO_LIST_DATABASE_USER'] %>
+  password: <%= ENV['TODO_LIST_DATABASE_PASS'] %>
